Improved social links with animations, minimal layout issues fixed with footer and toggle theme compoenent improved

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -22,16 +22,10 @@ body{
 .darkText{
   color: white;
 }
-.lightBtnText{
-  color: #203A43;
-}
 .lightBtnText:hover{
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   background-color: #203A43;
   color: #eeec;
-}
-.darkBtnText{
-  color: white ;
 }
 .darkBtnText:hover{
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
@@ -68,6 +62,8 @@ body{
   font-family: 'Julius Sans One', sans-serif;
   font-weight:normal;
 }
+
+/* Toggle Theme */
 .toggleBG input{
   opacity: 0;
 }
@@ -107,25 +103,19 @@ body{
   left: -5px;
   border-radius: 20px;
 }
-input:checked + .circle::before{
+.toggleBG input:checked + .circle::before{
   transform: translateX(20px);
   box-shadow: 7px 5px 0 0 #636363;
   top: -4px;
   left: -5px;
 }
-.headerSocials{
-  transition: 0.5s;
-  min-width: 100px;
-  margin: 0px 5px 0px 5px;
-  text-align: center;
-  border-radius: 50px;
-}
-
-.linkIcon{
-  transition: 0.1s;
-}
-.headerSocials:hover .linkIcon{
-  transform: scale(1.1);
+.moon {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  box-shadow: 9px 9px 0 0 #333;
+  margin-left: -25px;
+  margin-top: -25px;
 }
 
 
@@ -134,6 +124,82 @@ input:checked + .circle::before{
   border-radius: 25px;
   width: 40px;
   transition: 0.5;
+}
+/* ---------------------- */
+
+
+/* Toggle Theme V2 */
+.toggleBg input{
+  opacity: 0;
+}
+.toggleBg{
+  position: relative;
+  display: block;
+  height: 30px;
+  width: 60px;
+  box-shadow: inset 0px 1px 4px rgba(0,0,0,0.4), inset 0px -1px 4px rgba(255,255,255,0.4);
+  /* box-shadow: inset 0px 5px 15px rgba(0,0,0,0.4), inset 0px -5px 15px rgba(255,255,255,0.4); */
+  border-radius: 30px;
+  background-color: #ebeeec;
+}
+.selector{
+  display: inline-block;
+  position: absolute;
+  left: 0;
+}
+.switch{
+  position: absolute;
+  background-color: #203A43;
+  width: 30px;
+  height: 30px;
+  border-radius: 20px;
+  left: 0;
+  transition: 0.3s ease-in-out;
+}
+.Sun{
+  padding: 5px 14px 0px 4px;
+}
+.Moon{
+  color: #203A43;
+  transition: 0.3s ease;
+}
+.toggleBg input:checked + .switch{
+  background-color: gray;
+  left: 30px;
+}
+.toggleBg input:checked ~ .selector .Moon{
+  color: white;
+}
+/* --------------------------- */
+
+/* Social Buttons */
+.headerBtn{
+  display: flex;
+  width: 40px;
+  height: 40px;
+  border-radius: 40px;
+  overflow: hidden;
+  transition: 0.3s ease-out;
+}
+.icon{
+  transition: 0.3s;
+}
+.lightIcon{
+  color: white;
+}
+.darkIcon{
+  color: #203A43;
+}
+.headerBtn:hover{
+  width: 115px;
+  margin: 50px;
+}
+.headerBtn:hover .socialName{
+  display: flex;
+}
+.socialName{
+  display: none;
+  transition: 0.3s ease-in;
 }
 
 /* -----------------------Navigation Bar----------------------- */
@@ -209,15 +275,5 @@ li{
 
 .footerLogo{
   max-height: 150px;
-  background-color: white;
-  margin: 5px 0px 5px 0px;
 }
 
-.moon {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  box-shadow: 9px 9px 0 0 #333;
-  margin-left: -25px;
-  margin-top: -25px;
-}
